Updated package files

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "url": "git+https://github.com/Advve/A.H.A.git"
   },
   "author": "NaCI",
-  "license": "ISC",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/Advve/A.H.A/issues"
   },
